--- a/css/style.css
+++ b/css/style.css
@@ -29,13 +29,14 @@ h3 {
 /* nav bar */
 .title-container h1 {
 	font-size: 5rem;
-	opacity: 0.5;
 }
 .title-container h1 span:first-child {
 	color: #2b216b;
+	opacity: 0.5;
 }
 .title-container h1 span:last-child {
 	color: #00aa77;
+	opacity: 0.5;
 }
 .pushit-navbar a {
 	color: #2b216b;
@@ -65,6 +66,9 @@ h3 {
 }
 .social-icon {
 	padding-right: 1rem;
+}
+.social-media-container a:last-child span{
+	padding-right: 0;
 }
 
 /* home-page carousel section */
@@ -123,8 +127,10 @@ h3 {
 }
 
 @media only screen 
-and (max-width : 980px) {
+and (max-width : 767px) {
 	.title-container h1 span:last-child {
-			float: right
+		float: right;
+		line-height: 0rem;
+		position: relative;
 	}
 }
